Update tính năng cấu hình học kỳ theo biê pháp week-base.